--- a/src/main/webapp/tds/web-app/css/page/module/planning/planning-dashboard.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/planning/planning-dashboard.component.sass
@@ -1,6 +1,47 @@
 .planning-dashboard-component
+  font-family: helvetica, arial, sans-serif
+  a
+    color: black
+    font-weight: bold
+  a :hover
+    text-decoration: underline
+    color: black
+  .percentage-bars
+    border: 1px solid #63a242
   table
     width: 100%
+    .dashboard-stat-icon-td
+      width: 14px
+      padding-left: 2px
+      padding-right: 2px
+      background-color: transparent
+    .dashboard-stat-desc-td
+      width: 90px
+      padding-right: 2px
+    .dashboard-stat-table
+    .dashboard-stat-td-l
+      width: 20px
+      text-align: left
+    .dashboard-stat-graph-td
+      padding-left: 2px
+      padding-right: 2px
+    td
+      padding: 4px 5px
+    .dashboard-bar-base-small
+      padding: 0px
+      padding-right: 5px
+      width: 85%
+      height: 5px
+      background-color: lightyellow
+      box-shadow: 0px 0px 0px
+      border: 1px solid #63a242
+    .dashboard-bar-graph-small
+      background-color: #BFF3A5
+      z-index: -1
+      height: 5px
+      border-right-width: 3px
+      border-color: lightgray
+      border-right-style: inset
   h4
     font-weight: 700
   .phase-wrapper
@@ -20,9 +61,9 @@
       background-size: contain
       padding: 15px
     .discovery-phase
-      max-width: 285px
+      width: 31%
     .analysis-phase
-      max-width: 285px
+      width: 31%
     .execution-phase
       width: 63%
   .dashboard-bar-base
