TM-13175 - Made detail rows collapse off task grid refresh.

--- a/src/main/webapp/tds/web-app/app-js/modules/user/components/dashboard/user-dashboard.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/user/components/dashboard/user-dashboard.component.html
@@ -27,7 +27,7 @@
                         </ng-template>
                     </kendo-grid-column>
                 </kendo-grid>
-                <kendo-grid
+                <kendo-grid #taskGrid
                         [data]="taskList"
                         [selectable]="true">
                     <ng-template kendoGridToolbarTemplate>
