--- a/src/main/webapp/tds/web-app/app-js/modules/assetSummary/components/list/asset-summary-list.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/assetSummary/components/list/asset-summary-list.component.html
@@ -5,22 +5,24 @@
             <div class="box-body box-with-empty-header">
                 <kendo-grid
                         [data]="gridData"
-                        [resizable]="true"
-                        (cellClick)="onCellClick($event)">
+                        [resizable]="true">
                     <ng-template kendoGridToolbarTemplate [position]="'top'">
                         <div (click)="reloadData()" class="kendo-grid-toolbar__refresh-btn"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></div>
                     </ng-template>
                     <kendo-grid-column *ngFor="let column of assetSummaryColumnModel.columns" field="{{column.property}}" [width]="!column.width ? COLUMN_MIN_WIDTH : column.width">
-                        <ng-template kendoGridHeaderTemplate>
-                            <div (click)="onClickHeader($event)">
-                                <label> {{column.label}}</label>
+                        <ng-template kendoGridHeaderTemplate let-columnIndex="columnIndex">
+                            <div (click)="onClickHeader($event, column.property)">
+                                <label> {{column.label}} </label>
                             </div>
                         </ng-template>
-                        <ng-template kendoGridCellTemplate *ngIf="column.property !== 'bundle.name'" let-dataItem>
-                            <label *ngIf="dataItem[column.property] > 0"> {{dataItem[column.property]}}</label>
+                        <ng-template kendoGridCellTemplate *ngIf="column.property === 'bundle'" let-dataItem>
+                            <a href="../moveBundle/show/{{dataItem[column.property].id}}"> {{dataItem[column.property].name}} </a>
+                        </ng-template>
+                        <ng-template kendoGridCellTemplate *ngIf="column.property !== 'bundle'" let-dataItem>
+                            <a [routerLink]="['/asset','views',dataItem[column.property].id,'show']" *ngIf="dataItem[column.property].count > 0"> {{dataItem[column.property].count}}</a>
                         </ng-template>
                         <ng-template kendoGridFooterTemplate let-dataItem let-columnIndex="columnIndex">
-                            <div *ngIf="column.property === 'bundle.name'">
+                            <div *ngIf="column.property === 'bundle'">
                                 {{'GLOBAL.TOTAL' | translate}}
                             </div>
                             {{ total[column.property] }}
