--- a/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
@@ -1,5 +1,5 @@
 .application-conflicts
-  width: 30%
+  width: 40%
   margin-left: 15px
   margin-top: 10px
   .application-section
@@ -8,9 +8,11 @@
     align-items: center
     margin-top: 10px
     .section-title
-      width: 30%
+      width: 35%
     .section-control
-      width: 70%
+      width: 65%
+      label
+        font-weight: normal
 
 
 
