TM-13133 Move template to external file

--- a/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
@@ -1,7 +1,9 @@
 .application-conflicts
-  width: 40%
   margin-left: 15px
   margin-top: 10px
+  widht: 100%
+  .settings
+    width: 40%
   .application-section
     display: flex
     justify-content: center
