TM-14683 - Remove the highlight on the grid for this scenario in specific

--- a/src/main/webapp/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/src/main/webapp/tds/web-app/css/elements/component/task-detail-component.sass
@@ -22,6 +22,9 @@
     .successor-predecessor-table
       max-height: 200px
       height: 200px
+      .k-grid tbody tr:hover,
+      .k-grid tbody tr.k-state-hover
+        color: inherit
   .modal-content.task-create-component
     min-height: 720px
     min-width: 769px
