--- a/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/reports/application-conflicts-component.sass
@@ -2,8 +2,49 @@
   margin-left: 15px
   margin-top: 10px
   widht: 100%
+  .field-error
+    color: red
+  .application-container
+    margin-bottom: 40px
+  .results
+    font-size: 13px
+    background: white
+    .header
+      display: flex
+      justify-content: center
+      align-items: center
+      flex-direction: column
+      font-size: 20px
+      padding: 20px
+      .main-title
+        font-weight: bold
+  .odd
+    padding: 5px
+    div.data-item
+      background: white
+      border-right: 2px solid white
+  .even
+    padding: 5px
+    div.data-item
+      background: lightgray
+      border-right: 2px solid white
+  .application-header
+    background: lightgray
+    font-weight: bold
+  .item-header
+    padding: 0
+    div
+      text-decoration: underline
+  .application-header,
+  .support-header,
+  .dependency-header
+    padding: 5px
   .settings
     width: 40%
+  .support-header,
+  .dependency-header
+    div.title
+      padding-left: 40px
   .application-section
     display: flex
     justify-content: center
