TM-13133 Display report header

--- a/src/main/webapp/tds/web-app/app-js/modules/reports/components/application-conflicts/application-conflicts.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/reports/components/application-conflicts/application-conflicts.component.html
@@ -1,5 +1,5 @@
 <div class="application-conflicts">
-	<div class="settings">
+	<div class="settings" *ngIf="!isDisplayingReport">
 		<div class="application-section">
 			<div class="section-title">Bundle</div>
 			<div class="section-control">
@@ -13,7 +13,7 @@
 			<div class="section-title">App Owner</div>
 			<div class="section-control">
 				<kendo-dropdownlist name="appOwner" class="form-control" [data]="model.appOwnerList"
-					[textField]="'name'" [valueField]="'id'" [(ngModel)]="model.defaultAppowner">
+					[textField]="'name'" [valueField]="'id'" [(ngModel)]="model.defaultAppOwner">
 				</kendo-dropdownlist>
 			</div>
 		</div>
@@ -74,9 +74,9 @@
 		</div>
 	</div>
 
-	<div class="container results">
+	<div class="container results" *ngIf="isDisplayingReport">
 		<div class="header">
-			<div class="main-title">Application Conflicts - TM-Demo : Buildout and App Owner:All</div>
+			<div class="main-title">Application Conflicts - {{userContext ? userContext.project.name : ''}}: {{model.defaultBundle.name}} and App Owner: {{model.defaultAppOwner.name}}</div>
 			<div class="sub-title">This analysis was performed on 04/05/2019 05:09 PM for TDS.</div>
 		</div>
 
