TM-13138 - Completed layout for planning dashboard.

--- a/src/main/webapp/tds/web-app/css/page/module/planning/planning-dashboard.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/planning/planning-dashboard.component.sass
@@ -78,3 +78,5 @@
       border-right-width: 3px
       border-color: lightgray
       border-right-style: inset
+  .dashboard-stat-exec-tdmc
+    width: 48px
