--- a/src/main/webapp/tds/web-app/app-js/modules/planning/components/dashboard/planning-dashboard.component.html
+++ b/src/main/webapp/tds/web-app/app-js/modules/planning/components/dashboard/planning-dashboard.component.html
@@ -137,9 +137,9 @@
                     <tbody><tr>
                         <td class="dashboard-bar-base">
 
-                            <div class="dashboard-bar-graph" id="appmovedbar" style="width: 1%;"></div>
+                            <div class="dashboard-bar-graph" id="appmovedbar" [style.width]="planningDashboardModel.execution.movedAppPerc+'%'"></div>
                             <div style="position: relative; top: -18px; height: 0px; margin-left: 5px;">
-                                <b> 1% </b>
+                                <b> {{planningDashboardModel.execution.movedAppPerc}}% </b>
                                 <a href="/tdstm/application/list?filter=application&amp;plannedStatus=Moved">Applications Completed</a>
                             </div>
 
@@ -150,8 +150,10 @@
                     <tr>
                         <td class="dashboard-bar-base">
 
-                            <div class="dashboard-bar-graph0">
-                                <b>0% Servers Completed</b>
+                            <div class="dashboard-bar-graph" [style.width]="planningDashboardModel.execution.movedServersPerc+'%'"> </div>
+                            <div style="position: relative; top: -18px; height: 0px; margin-left: 5px;">
+                                <b> {{planningDashboardModel.execution.movedServersPerc}}% </b>
+                                <a href="/tdstm/application/list?filter=server&amp;plannedStatus=Moved">Servers Completed</a>
                             </div>
 
                         </td>
@@ -159,7 +161,157 @@
 
                     </tbody></table>
             </div>
-            <div>Big Table Here</div>
+            <div class="container-fluid" style="padding-left: 0px;">
+                <div class="row-fluid">
+                    <div class="col-md-10 col-xs-10" style="padding-left: 0px; padding-right: 0px;">
+                        <div id="eventDataTableId" style="overflow-y: hidden;">
+                            <table class="dashboard-right-table dashboard-stat-table" style="border-spacing: 5px 0px; border-collapse: separate; width: auto">
+                                    <thead *ngIf="planningDashboardModel.execution.moveEventList.length > 0">
+                                    <tr>
+                                        <th style="background-color: transparent;" class="">&nbsp;</th>
+                                        <th></th>
+                                        <th rowspan="3" class="dashboard-stat-exec-td "  valign="bottom">
+                                            <div style="padding-bottom: 5px; font-size: 10px; text-align: right;"><b>Unassigned</b></div>
+                                        </th>
+
+                                        <th *ngFor="let event of planningDashboardModel.execution.moveEventList" class="dashboard-stat-exec-tdmc" style="text-align: right !important; padding-right: 0px !important;"> <!-- For each in move event list-->
+                                            <div class="dashboard-stat-exec-tdmc-title">
+                                                <a>
+                                                    {{event.name.length > 18 ? event.name.substring(0,15) + '...' : event.name}}
+                                                </a>
+                                            </div>
+                                        </th>
+                                        <th class="dashboard-stat-exec-tdmc-title"></th>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                        <td *ngFor="let event of planningDashboardModel.execution.moveEventList" class="dashboard-stat-exec-tdmc" style="font-size: 10px; text-align: right;" nowrap>
+                                            <b>{{planningDashboardModel.execution.eventStartDate[event.id]}}</b>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                         <td *ngFor="let event of planningDashboardModel.execution.moveEventList" class="dashboard-stat-exec-tdmc" style="font-size: 10px; text-align: right">
+                                             <b> {{event.runbookStatus ? event.runbookStatus : ''}}</b>
+                                         </td>
+                                        <td class="dashboard-stat-exec-tdmc" style="font-size: 10px; text-align: right;">
+                                            <b>Done</b>
+                                        </td>
+                                    </tr>
+                                    </thead>
+                                <tbody>
+                                <tr>
+                                    <td class="dashboard-stat-icon-td"></td>
+                                    <td style="vertical-align: middle;"> <a>Applications</a></td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.unassignedAppCount}} ({{planningDashboardModel.execution.percentageUnassignedAppCount}}%)</a></td>
+                                    <td *ngFor="let app of planningDashboardModel.execution.appList" style="text-align: right;">
+                                        <span *ngIf="app.count==0" class='colorGrey'>0</span>
+                                        <a *ngIf="app.count!=0">
+                                            {{app.count}}
+                                        </a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.percAppDoneCount}}%</a></td>
+                                </tr>
+                                <tr>
+                                    <td class="dashboard-stat-icon-td"></td>
+                                    <td>
+                                        <a>Physical Server</a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.unassignedPhysicalServerCount}} ({{planningDashboardModel.execution.percentageUnassignedAppCount}}%)</a></td>
+                                    <td *ngFor="let server of planningDashboardModel.execution.phyServerList" style="text-align: right;">
+                                        <span *ngIf="server.count==0" class='colorGrey'>0</span>
+                                        <a *ngIf="server.count!=0">
+                                            {{server.count}}
+                                        </a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.percentagePhysicalServerCount}}%</a></td>
+                                </tr>
+                                <tr>
+                                    <td class="dashboard-stat-icon-td"></td>
+                                    <td>
+                                        <a>Virtual Server</a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.unassignedVirtualServerCount}} ({{planningDashboardModel.execution.percentageUnassignedAppCount}}%)</a></td>
+                                    <td *ngFor="let server of planningDashboardModel.execution.virtServerList" style="text-align: right;">
+                                        <span *ngIf="server.count==0" class='colorGrey'>0</span>
+                                        <a *ngIf="server.count!=0">
+                                            {{server.count}}
+                                        </a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.percVirtualServerCount}}%</a></td>
+                                </tr>
+                                <tr>
+                                    <td class="dashboard-stat-icon-td"></td>
+                                    <td><a>Databases</a></td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.unassignedDbCount}} ({{planningDashboardModel.execution.percentageUnassignedAppCount}}%)</a></td>
+                                    <td *ngFor="let db of planningDashboardModel.execution.dbList" style="text-align: right;">
+                                        <span *ngIf="db.count==0" class='colorGrey'>0</span>
+                                        <a *ngIf="db.count!=0">
+                                            {{db.count}}
+                                        </a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.percentageDBCount}}%</a></td>
+                                </tr>
+                                <tr>
+                                    <td class="dashboard-stat-icon-td"></td>
+                                    <td nowrap="nowrap"><a>Physical Storage</a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.unAssignedPhyStorageCount}} ({{planningDashboardModel.execution.percentageUnassignedAppCount}}%)</a></td>
+                                    <td *ngFor="let storage of planningDashboardModel.execution.phyStorageList" style="text-align: right;">
+                                        <span *ngIf="storage.count==0" class='colorGrey'>0</span>
+                                        <a *ngIf="storage.count!=0">
+                                            {{storage.count}}
+                                        </a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.percentagePhyStorageCount}}%</a></td>
+                                </tr>
+                                <tr>
+                                    <td class="dashboard-stat-icon-td"></td>
+                                    <td><a>Logical Storage</a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.unassignedFilesCount}} ({{planningDashboardModel.execution.percentageUnassignedAppCount}}%)</a></td>
+                                    <td *ngFor="let file of planningDashboardModel.execution.filesList" style="text-align: right;">
+                                        <span *ngIf="file.count==0" class='colorGrey'>0</span>
+                                        <a *ngIf="file.count!=0">
+                                            {{file.count}}
+                                        </a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.percentageFilesCount}}%</a></td>
+                                </tr>
+                                <tr>
+                                    <td class="dashboard-stat-icon-td"></td>
+                                    <td><a>Other</a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.unassignedOtherCount}} ({{planningDashboardModel.execution.percentageUnassignedAppCount}}%)</a></td>
+                                    <td *ngFor="let other of planningDashboardModel.execution.otherTypeList" style="text-align: right;">
+                                        <span *ngIf="other.count==0" class='colorGrey'>0</span>
+                                        <a *ngIf="other.count!=0">
+                                            {{other.count}}
+                                        </a>
+                                    </td>
+                                    <td style="text-align: right;"><a>{{planningDashboardModel.execution.percentageOtherCount}}%</a></td>
+                                </tr>
+                                <tr>
+                                    <td class="dashboard-stat-icon-td">&nbsp;</td>
+                                    <td><b>Open Tasks</b></td>
+                                    <td></td>
+                                        <td *ngFor="let task of planningDashboardModel.execution.openTasks" style="text-align: right;">
+                                            <span *ngIf="task.count==0" class='colorGrey'>0</span>
+                                            <a *ngIf="task.count!=0">
+                                                {{task.count}}
+                                            </a>
+                                        </td>
+                                    <td></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
