TM-12026 WiP: First phase of angularize Report Service

--- a/src/main/webapp/tds/web-app/css/page/index.sass
+++ b/src/main/webapp/tds/web-app/css/page/index.sass
@@ -47,3 +47,4 @@
 @import "module/user/user-dashboard.component"
 @import "module/user/user-manage-staff.component"
 @import "module/reports/pre-event-checklist.component"
+@import "module/reports/server-conflicts-report.component"
