--- a/src/main/webapp/tds/web-app/css/page/module/assetComment/asset-comment-list.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/assetComment/asset-comment-list.component.sass
@@ -1,4 +1,8 @@
 .asset-comment-list-component
+  .k-grid-content-locked,
+  .k-grid-header-locked
+    border-right-width: 5px
+    border-right-color: $color--grey2
   .k-grid tbody tr td
     overflow: hidden
     text-overflow: ellipsis
