--- a/src/main/webapp/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
@@ -1,4 +1,8 @@
 .dependencies-view-grid-component
+  .k-grid-content-locked,
+  .k-grid-header-locked
+    border-right-width: 5px
+    border-right-color: $color--grey2
   .actionable-column
     font-weight: bold
     cursor: pointer
@@ -13,9 +17,9 @@
       border: 0
   .bulkchange-section
     padding-left: 8px
-    display: flex;
-    justify-content: start;
-    align-items: center;
+    display: flex
+    justify-content: start
+    align-items: center
 
   .k-grid
     margin-top: 10px
